# ai-browser-agent

./: .gitignore  README.md  SCRUM_LINKS.md  package-lock.json  package.json
backend/: .env  README.md  llmActionPlanner.js  mcp.js  package-lock.json  package.json  pyproject.toml  server.js  server.py
backend/llm/: llm_automation.py  llm_chat.py
backend/python_agent/.browseruse-config/profiles/default/: .browseruse_profile_id  Local State
backend/python_agent/.browseruse-config/profiles/default/Default/: Cookies  Favicons  Network Action Predictor  Preferences  Web Data
backend/python_agent/.browseruse-config/profiles/default/GraphiteDawnCache/: data_1  f_000008  index
backend/python_agent/.browseruse-config/profiles/default/ShaderCache/: index
backend/python_agent/.browseruse-config/profiles/default/segmentation_platform/: ukm_db
backend/python_agent/.browseruse-profiles/default/: Local State
backend/python_agent/.browseruse-profiles/default/Default/: DIPS  Favicons  History  Web Data
backend/python_agent/.browseruse-profiles/default/Default/DawnGraphiteCache/: index
backend/python_agent/.browseruse-profiles/default/GrShaderCache/: data_1
backend/python_agent/.browseruse-profiles/default/GraphiteDawnCache/: data_2
backend/python_agent/.browseruse-profiles/default/ShaderCache/: index
backend/python_agent/.browseruse-profiles/default/segmentation_platform/: ukm_db
backend/routes/: commandRoutes.js
backend/siteHandlers/: amazon.js  tesco.js
backend/utils/: check_api_key.py
(+4533 files in other folders)
